cmake_minimum_required(VERSION 3.10)
project(hesoyam)

find_package(Threads REQUIRED)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -no-pie -pedantic -g")
set(ADDITIONAL_LIBRARIES menu)
find_package(Curses REQUIRED)
set(SOURCE_FILES main.cpp)
add_executable(hesoyam ${SOURCE_FILES})
include_directories(Exchange)
add_subdirectory(Exchange)
add_subdirectory(Tests)
target_link_libraries(hesoyam Exchange Threads::Threads ${ADDITIONAL_LIBRARIES} ${CURSES_LIBRARIES})